2004-02-03  Tom Copeland <tom@infoether.com>
	* Applied patch [ #662 ] New german localization diff file
	* Applied patch [ #665 ] Spanish mail_charset

2004-01-24  Christian Bayle <bayle@debian.org>
	* cvs admin -kb on all .png files and added according rule in
	CVSROOT/cvswrappers

2004-01-24  Sung Kim <hunkim@cs.ucsc.edu>

	* Adding the sys_use_ssl option
	* www/account/login.php: Check the sys_use_ssl variable.

2004-01-16  Guillaume Smet  <guillaume-gforge@smet.org>

	* Optimized BaseLanguage.class
	* Implemented a localization caching system

2004-01-15  Guillaume Smet  <guillaume-gforge@smet.org>

	* Rewrote mailing lists manager (OO and localizable)
	* Fixed security problems in docman and frs (bug #649)
	* Updated tracker french localization

2003-12-30  Tim Perdue  <tim@perdue.net>

	* Adding cvs history_parse.php written by Brett N DiFrischia (orderthruchaos)

2003-12-18  Roland Mas  <99.roland.mas@aist.enst.fr>

	* common/include/GForge.class: Only count public projects and
	non-None users when gathering statistics for the front page.

2003-12-17  Roland Mas  <99.roland.mas@aist.enst.fr>

	* README.Plugins: Mention ldapextauth in the list of known
	plugins.

	* common/include/session.php: Added session_before_login hook for
	the ldapextauth plugin (and the forthcoming *extauth plugins, one
	hopes :-)

2003-12-03  Roland Mas  <99.roland.mas@aist.enst.fr>

	* deb-specific/db-upgrade.pl: Upgrade database using 20031126.sql.

	* www/include/languages/German.tab: Patch #623 from Marco Schmidt
	<schmidtmarco@web.de> improving German localisation.

2003-11-30  Tim Perdue  <tim@perdue.net>

	* Adding switches for turning tools on/off
	* Adding phone/fax/address/title to user
	* Couple of date -> post_date field changes

	* added cronjob logging and viewing apparatus

2003-11-30  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/project_home.php: Patch #614 from Guillaume Smet
	adding the group/long_tracker key.