@@ -1,6 +1,8 @@
 2004-02-03  Tom Copeland <tom@infoether.com>
 	* Applied patch [ #662 ] New german localization diff file
 	* Applied patch [ #665 ] Spanish mail_charset
+	* Applied patch [ #669 ] Made the Gantt chart assignee and status 
+	combo boxes working
 
 2004-01-24  Christian Bayle <bayle@debian.org>
 	* cvs admin -kb on all .png files and added according rule in
